[package]
name = "fyrst-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the FYRST protocol"
license = "MIT"

[[bin]]
name = "fyrst"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
solana-sdk = "=1.17.0"
solana-client = "=1.17.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
